2000-09-23  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
	patch by Rudolf Cejka <cejkar@users.sourceforge.net>

	* client-src/calcsize.c:sets correct program name,
	prevent coredumps and some improrer command line error mesages

2000-09-23  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* common-src/amanda.h: prototype clean_regex().
	* common-src/match.c: new function clean_regex() that escape
	all non-alphanumeric character.
	* recover-src/extract_list.c (add_file, delete_file): use clean_regex().

2000-09-23  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amcheck.c: (start_server_check): check for the oldlog
	directory.

2000-09-22  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amtrmlog.c: better check of the oldlog directory.

2000-09-22  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amcheck.c: (start_server_check): don't check the tape
        if tapedev is /dev/null.

2000-09-22  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/reporter.c (output_tapeinfo): test reversed for run_tapes.

2000-08-01  Alexandre Oliva  <oliva@lsd.ic.unicamp.br>

	* client-src/sendbackup-gnutar.c (start_backup) <taropt>:
	NULL-terminate it correctly.

2000-07-18 John R. Jackson  <jrj@purdue.edu>

	* changer-src/chg-chio.pl.in (do_time): fix chg-chio.pl timestamp
	function to return a string instead of writing to stdout.

2000-07-18 John R. Jackson  <jrj@purdue.edu>

	* server-src/taper.c (file_reader_side): detach and destroy shared
	memory areas on an error condition.  Found by Patrik Andersin
	<cat@iki.fi>.

2000-07-17  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* client-src/sendsize.c (getsize_dump,getsize_gnutar): set 
	dumppid to the return value of pipespawn.

2000-06-27  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* client-src/sendbackup.c (parse_options): set efile.

2000-06-26  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
