@@ -23,7 +23,7 @@
  * Author: AMANDA core development group.
  */
 /*
- * $Id: file.c,v 1.14.4.5 1999/10/03 21:29:56 jrj Exp $
+ * $Id: file.c,v 1.14.4.6 2000/09/24 01:57:20 martinea Exp $
  *
  * file and directory bashing routines
  */
@@ -84,7 +84,7 @@ gid_t gid;	/* gid for new directories */
     dir = stralloc(file);	/* make a copy we can play with */
 
     p = strrchr(dir, '/');
-    if(p != dir) {	/* got a '/' */
+    if(p != dir && p != NULL) {	/* got a '/' or a simple name */
 	*p = '\0';
 
 	if(access(dir, F_OK) != 0) {	/* doesn't exist */
