@@ -89,6 +89,7 @@ Works only during the estimate phase.
 .B --gestimate|gettingestimate
 Print all partitions whose estimate is not finished.
 Works only during the estimate phase.
+.TP
 .B --stats|statistics
 Print statistics about active-time of taper and dumpers.
 .SH "SEE ALSO"
