@@ -1,6 +1,12 @@
 2000-09-23  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
 	patch by Rudolf Cejka <cejkar@users.sourceforge.net>
 
+	* common-src/file.c (mkpdir): check p != NULL
+	* man/amstatus.8.in: typo
+
+2000-09-23  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
+	patch by Rudolf Cejka <cejkar@users.sourceforge.net>
+
 	* client-src/calcsize.c:sets correct program name,
 	prevent coredumps and some improrer command line error mesages
 
@@ -919,7 +925,7 @@
 	* changer-src/scsi-aix.c: (SCSI_ExecuteCommand) Add missing
 	parameter to DecodeExtSense.
 
-	* changer-src/scsi-hpux.c: Added static char rcsid[] = "$Id: ChangeLog,v 1.205.2.365 2000/09/24 01:52:33 martinea Exp $";
+	* changer-src/scsi-hpux.c: Added static char rcsid[] = "$Id: ChangeLog,v 1.205.2.366 2000/09/24 01:57:19 martinea Exp $";
 	* changer-src-/chg-scsi.c: dito
 	* changer-src/scsi-changer-driver.c: dito
 
